Dev - fix: More fixes for alignment - this time to the right with styling

--- a/css/buttons.bootstrap.scss
+++ b/css/buttons.bootstrap.scss
@@ -5,7 +5,6 @@
 div.dt-button-collection {
 	position: absolute;
 	z-index: 2001;
-	width: 100%;
 
 	// Recreate the dropdown menu styling - we nest it
 	background-color: white;
